welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:43: error: expected class or object definition
def patern()
^PatternPicture:44: error: expected class or object definition
{
^PatternPicture:63: error: expected class or object definition
patern();
^PatternPicture:64: error: expected class or object definition
avance(4);
^PatternPicture:65: error: expected class or object definition
patern();
^PatternPicture:66: error: expected class or object definition
 recule(4);
 ^PatternPicture:67: error: expected class or object definition
 gauche();
 ^PatternPicture:68: error: expected class or object definition
 avance(4);
 ^PatternPicture:69: error: expected class or object definition
 droite();
 ^PatternPicture:70: error: expected class or object definition
patern();
^PatternPicture:71: error: expected class or object definition
 avance(4);
 ^PatternPicture:72: error: expected class or object definition
 patern();
 ^PatternPicture:73: error: Unmatched closing brace '}' ignored here
} 
^PatternPicture:75: error: eof expected but '}' found.
}
^